# SigmaPips-V1

./: .dockerignore  .env.example  .env.telegram  .gitignore  .railwayignore  Database_luxuryrentals.db  Dockerfile  cleaned_instagram_data 3(Werkblad 1 - cleaned_instagram_) 4.csv  database.py  docker-compose.yml  instagram_search.py  main.py  news_ai_service.py  pyproject.toml  railway.toml  requirements.in  requirements.txt  save_no_email.py  telegram_service.py  test_signal.py  test_telegram.py  trading_bot.py
app/: config.py  main.py
app/bot/: constants.py  handlers.py
app/services/: __init__.py  chart_analysis.py  chart_service.py  news_sentiment.py  signal_processor.py  technical_analysis.py  trading_bot.py
app/utils/: init.py  logger.py  redis.py  supabase.py
backup_signal_services/Signal-Processor/: app.py
logs/.org.chromium.Chromium.36pZdW/: SingletonCookie
logs/.org.chromium.Chromium.3r6tai/: SingletonCookie
logs/.org.chromium.Chromium.6Yv1yT/: SingletonCookie
logs/.org.chromium.Chromium.ABT9Lm/: SingletonCookie
logs/.org.chromium.Chromium.Cj93yd/: SingletonCookie
logs/.org.chromium.Chromium.DZDNSt/: SingletonCookie
logs/.org.chromium.Chromium.DbuHgR/: SingletonCookie
logs/.org.chromium.Chromium.FDje3e/: SingletonCookie
logs/.org.chromium.Chromium.FkMbw2/: SingletonCookie
logs/.org.chromium.Chromium.Gk5imP/: SingletonCookie
logs/.org.chromium.Chromium.GkUcl3/: SingletonCookie
logs/.org.chromium.Chromium.JQbLbp/: SingletonCookie
scripts/: test_calendar.py  test_chart.py  test_health.py  test_sentiment.py  test_signal.py
services/: database.py  news_ai_service.py  telegram_service.py
trading_bot/: .env.example  database.py  docker-compose.yml  main.py  requirements.txt  test_services.py  test_signal.py
(+46 files in other folders)
