[tool.poetry]
name = "sigmapips"
version = "1.0.0"
description = "TradingView signal processor for Telegram"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-telegram-bot = "^20.7"
supabase = "^2.3.0"
redis = "^5.0.1"
openai = "^1.10.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.2"
selenium = "^4.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
