[tool.poetry]
name = "sigmapips"
version = "1.0.0"
description = "TradingView signal processor for Telegram"
authors = ["Your Name <your.email@example.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-telegram-bot = "^20.7"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 9001 --log-level debug"
